--- a/qoute-service/pom.xml
+++ b/qoute-service/pom.xml
@@ -18,6 +18,7 @@
     <app.start.class>com.example.quoteservice.BlogServiceApplication</app.start.class>
     <mockito-inline.version>4.3.1</mockito-inline.version>
     <springdoc-openapi.version>2.0.0</springdoc-openapi.version>
+    <dbrider.version>1.35.1</dbrider.version>
   </properties>
 
   <dependencies>
@@ -31,9 +32,27 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
       <version>${mockito-inline.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.database-rider</groupId>
+      <artifactId>rider-junit5</artifactId>
+      <version>${dbrider.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
