--- a/bdd-service/src/test/resources/application.yaml
+++ b/bdd-service/src/test/resources/application.yaml
@@ -1,6 +1,4 @@
 spring:
-#  main:
-#    allow-bean-definition-overriding: true
   datasource:
     url: jdbc:h2:file:./bdd-test-db;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER
     driver-class-name: org.h2.Driver
@@ -12,3 +10,6 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
 jwt:
   secret: secret
+pingtask:
+  url: http://localhost:8080/task
+  period: 1200000
