--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  qoute-service:
+  quote-service:
     build:
       context: .
       dockerfile: Dockerfile-quote-service
