--- a/bdd-service/pom.xml
+++ b/bdd-service/pom.xml
@@ -67,5 +67,12 @@
             <version>v.1</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
