--- a/bdd-service/pom.xml
+++ b/bdd-service/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>bdd-service</artifactId>
 
     <properties>
+        <app.start.class>com.example.bddservice.BDDServiceApplication</app.start.class>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <cucumber.version>7.4.1</cucumber.version>
@@ -72,6 +73,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <mainClass>${app.start.class}</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
