--- a/bdd-service/pom.xml
+++ b/bdd-service/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>bdd-service</artifactId>
 
     <properties>
-        <app.start.class>com.example.bddservice.BDDServiceApplication</app.start.class>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <cucumber.version>7.4.1</cucumber.version>
