--- a/qoute-service/src/main/resources/application.yaml
+++ b/qoute-service/src/main/resources/application.yaml
@@ -24,6 +24,7 @@ jwt:
   secret: ${SECRET_KEY:secret}
 pingtask:
   mode: ${PINGTASK_MODE:active}
+  url: ${PINGTASK_URL:http://localhost:8080/task}
   period: ${PINGTASK_PERIOD:1200000}
 
 server:
